templates/keycloak.yml
---
kind: Template
apiVersion: v1
metadata:
  name: keycloak
  annotations:
    openshift.io/display-name: Key Cloak Template
    description: A template for creating a simple key cloak installation.
    iconClass: icon-sso
    tags: keycloak
objects:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "${NAME}"
    name: "${NAME}"
  spec:
    selector:
      deploymentConfig: "${NAME}"
    ports: 
    - port: 8080
      targetPort: 8080
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: "${NAME}"
    name: "${NAME}"
  spec:
    host: ""
    to:
      name: "${NAME}"

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: "${NAME}"
    name: "${NAME}"
  spec:
    strategy: 
      type: Recreate
    replicas: 1
    selector:
      deploymentConfig: "${NAME}"
    template:
      metadata:
        labels:
          app: "${NAME}"
          deploymentConfig: "${NAME}"
        name: "${NAME}"
      spec: 
        containers:
        - name: "${NAME}"
          image: jboss/keycloak
          ports: 
          - containerPort: 8080
            protocol: TCP
    triggers:
    - type: ConfigChange

parameters:
- name: NAME
  displayName: Name
  description: The name assigned to all objects and the resulting resources.
  required: true
  value: keycloak
labels:
  template: keycloak-template
